refactor(matching): use Difficulty enum instead of strings